@@ -1,3 +1,10 @@
+2009-06-18  Tobias Burnus  <burnus@net-b.de>
+	    Mikael Pettersson  <mikpe@it.uu.se>
+
+	PR debug/40061
+	* dwarf2out.c (add_subscript_info): Fix build for
+	MIPS_DEBUGGING_INFO.
+
 2009-06-17  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
